# gigagig

./: README.md  requirements.txt
app/: __init__.py  app.db  config.py  forms.py  models.py  routes.py
app/templates/: base.html  book.html  booking_detail.html  bookings_for_my_gigs.html  create_gig.html  edit_profile.html  gig_detail.html  index.html  login.html  messages.html  my_bookings.html  my_gigs.html  register.html  search.html  search_results.html  send_message.html  user.html
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  app.db  config.py  email.py  models.py  routes.py
backend/app/templates/: add_category.html  book_gig.html  create_gig.html  gig_detail.html  index.html  my_bookings.html  review.html  search.html  search_results.html  user.html
backend/app/templates/email/: booking_accepted.html  new_message.html
backend/migrations/versions/: 4cd224af30d4_add_latitude_and_longitude_to_gig_model.py  a46f9b694ae4_add_booking_id_to_review_model.py
frontend/: README.md
frontend/src/router/: index.ts
migrations/versions/: b79c03df3eda_add_review_model.py  ecd2307e7c28_initial_migration.py
