[tool.poetry]
name = "backend"
version = "0.1.0"
description = "gigagig-server"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "1.14.0"
annotated-types = "0.7.0"
anyio = "4.6.0"
blinker = "1.9.0"
certifi = "2024.8.30"
charset-normalizer = "3.4.0"
click = "8.1.7"
distlib = "0.3.8"
distro = "1.9.0"
dnspython = "2.7.0"
email-validator = "2.2.0"
filelock = "3.16.1"
flask = "2.3.2"
flask-login = "0.6.3"
flask-migrate = "4.0.7"
flask-sqlalchemy = "3.1.1"
flask-wtf = "1.2.2"
h11 = "0.14.0"
httpcore = "1.0.5"
httpx = "0.27.2"
idna = "3.10"
imapclient = "3.0.1"
itsdangerous = "2.2.0"
jinja2 = "3.1.4"
jiter = "0.5.0"
mako = "1.3.6"
markupsafe = "3.0.2"
openai = "1.47.0"
pillow = "11.0.0"
platformdirs = "4.3.6"
pydantic = "2.9.2"
pydantic-core = "2.23.4"
pygame = "2.6.0"
python-dotenv = "1.0.1"
pyzmail36 = "1.0.5"
requests = "2.32.3"
sniffio = "1.3.1"
sqlalchemy = "2.0.36"
stripe = "11.3.0"
tqdm = "4.66.5"
typing-extensions = "4.12.2"
urllib3 = "2.2.3"
virtualenv = "20.26.5"
werkzeug = "2.3.7"
wtforms = "3.2.1"
wtforms-sqlalchemy = "0.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
